# jobhunter

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  README.md  SECURITY.md  VERIFICATION.md  curated_jobs_dashboard.py  docker-compose.yml  job_config.yaml  server.py
.github/workflows/: ci.yml  image.yml
artifacts/b5/: alert-rules.yml  backend-health.json  baseline-latency-report.json  grafana-dashboard.json  metrics-sample.txt  prometheus-targets.json  summary.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  health.py  main.py  metrics.py  observability.py  schemas.py
backend/app/auth/: __init__.py  jwt.py  models.py  router.py
backend/app/routers/: job_config.yaml  jobs.py
backend/tests/: test_api_contract.py  test_auth.py  test_ci_workflow.py  test_integration.py  test_jobs.py  test_metrics.py  test_observability.py
frontend/app/: layout.tsx  page.tsx
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/sealed-secret/: plaintext-template.yaml
k8s/security/: README.md  secure-pod-template.yaml
monitoring/: prometheus.yml
monitoring/alerts/: alerts.yml
monitoring/dashboards/: dashboard-provider.yml  jobhunter-dashboard.json
monitoring/datasources/: datasource.yml
observability/: docker-compose.yml
observability/prometheus/: prometheus.yml
scripts/: load_test.py
security/: audit-report.md
security/checks/: defender.txt  firewall.txt  listening-ports.txt  (+2 more)
terminal_cv_generator/: app.py  run_app.sh
tests/: test_ci_workflow.py
(+56 files in other folders)
