[project]
name = "jobhunter-backend"
version = "0.1.0"
description = "JobHunter FastAPI backend"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.0",
  "anyio>=4.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
